# mania-dx

./: README.md
game/: Cargo.toml  Dioxus.toml
