[package]
name = "game"
version = "0.1.0"
authors = ["Jer-Dan <jeremy.daniel.jd@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }

# Debug
dioxus-logger = "0.5.1"
